--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/f928a3bb51.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+  <header>
+<!----------Navigation Bar Starts--------------------------------->
+<nav>
+    <div class="logo">
+        <img class="logo-img" src="./images/Frame.png" alt="">
+<h2 class="logo-title"><span class="pink-g">G</span>amer</h2>
+    </div>
+<ul>
+    <li><a href="">About Us</a></li>
+    <li><a href="">Developers</a></li>
+    <li class="follow-us"><a href="">Follow Us On <img class="youtube-svg" src="./images/Vector.svg" alt=""> <img class="tiktok-svg" src="./images/tik-tok 1.svg" alt=""></a></li>
+</ul>
+  
+</nav>
+<!----------Navigation Bar Ends--------------------------------->
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>  
 </body>
 </html>
