added banner section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
   
 </nav>
 <!----------Navigation Bar Ends--------------------------------->
+<!--------Banner starts------------------->
+<div class="banner">
+    <div class="banner-content">
+  <h2 class="banner-title">PLAY LIKE THE</h2>   
+  <h2 class="banner-title-goat">G.O.A.T</h2>  
+  <div class="banner-desc">
+    <p class="banner-description1">1-Click instant play</p> 
+  <p class="banner-description2">No Download</p> 
+  <p class="banner-description3">1000s of supported online games</p>
+  </div> 
+  <button class="banner-btn-pink">SIGN IN</button>
+  <button class="banner-btn-sky">GO ROGUE</button>
+    </div>
+    <div class="banner-img">
+    <img src="./images/Group 18.png" alt="">    
+    </div>
+</div>
+<!--------Banner Ends------------------->
   </header>
   <main>
 
