--- a/index.html
+++ b/index.html
@@ -45,7 +45,22 @@
 <!--------Banner Ends------------------->
   </header>
   <main>
-
+<!------play instantly section starts----------------->
+<div class="play">
+    <div class="play-content">
+<h2 class="play-title"><span class="pink-title">Play Instantly,</span>
+   <br>No Downloads
+   <br> No Installs.</h2>
+   <p class="play-description">Play games online for free without <br>downloading. Just click the Play button <br>and play instantly in your browser.</p>
+    </div>
+    <div class="play-images">
+<img src="./images/Rectangle 55.png" alt="">
+<div class="cartoon-img">
+    <img src="./images/Rectangle 66.png" alt="">
+</div>
+    </div>
+</div>
+<!------play instantly section Ends----------------->
   </main>
   <footer>
 
