--- a/index.html
+++ b/index.html
@@ -45,9 +45,30 @@
 <!--------Banner Ends------------------->
   </header>
   <main>
+<!---------Online games section starts--------------------->
+<h2 class="online-games-main-title">Online Games <span class="funny">Funny Videos</span></h2>
+<p class="online-games-small-title">A Collection of Hilarious Videos to Brighten Your Day</p>
+<div class="online-games-container">
+    <div class="online-games-images">
+    <img class="online-games-photo" src="./images/Rectangle 4.png" alt="">
+    <p class="online-games-desc">No Download. No Installs. Play <br> games Instantly on Gamer.</p>    
+    </div>
+    <div class="online-games-images">
+    <img class="online-games-photo" src="./images/Rectangle 5.png" alt="">
+    <p class="online-games-desc">Did you score? #unblockedgames <br>#school</p>    
+    </div>
+    <div class="online-games-images">
+    <img class="online-games-photo" src="./images/Rectangle 7.png" alt="">
+    <p class="online-games-desc">Breaking game records <br>like OG</p>    
+    </div>
+    <div class="online-games-images">
+    <img class="online-games-photo" src="./images/Rectangle 6.png" alt="">
+    <p class="online-games-desc">Busted gaming on school laptop, <br>but you are still lit.</p>    
+    </div>
+</div>
+<!---------Online games section Ends--------------------->
 
 
-    
 <!------play instantly section starts----------------->
 <div class="play">
     <div class="play-content">
