--- a/index.html
+++ b/index.html
@@ -85,6 +85,48 @@
     </div>
 </div>
 <!------play instantly section Ends----------------->
+<!----------games genre section starts------------------->
+<div class="games-genre">
+    <div class="genre-first-row">
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 11.png" alt="">
+        <p class="genre-name">Action Games</p>
+    </div>    
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 12.png" alt="">
+        <p class="genre-name">Adventure Games</p>
+    </div>    
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 13.png" alt="">
+        <p class="genre-name">Arcade Games</p>
+    </div>    
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 14.png" alt="">
+        <p class="genre-name">Educational Games</p>
+    </div>    
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 15.png" alt="">
+        <p class="genre-name">Word Games</p>
+    </div>  
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 16.png" alt="">
+        <p class="genre-name">Role Playing Games</p>
+    </div>  
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 17.png" alt="">
+        <p class="genre-name">Music Audio Games</p>
+    </div>  
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 18.png" alt="">
+        <p class="genre-name">Puzzle Games</p>
+    </div>  
+    <div class="genre-name-img">
+        <img src="./images/Rectangle 19.png" alt="">
+        <p class="genre-name">Strategy Games</p>
+    </div>   
+    </div>
+    </div>
+<!----------games genre section ends------------------->
   </main>
   <footer>
 
