added footer section

--- a/index.html
+++ b/index.html
@@ -128,8 +128,51 @@
     </div>
 <!----------games genre section ends------------------->
   </main>
+  <!--------footer starts----------->
   <footer>
-
+<div class="footer">
+    <img class="footer-logo" src="./images/Frame.png" alt="">
+    <h2 class="footer-title"><span class="pink-g">G</span>AMER</h2>
+</div>
+<div class="footer-category-container">
+ <div class="category-one">
+    <p>Our Story</p>
+    <p>Games</p>
+    <p>Web Games</p>
+ </div>
+ <div class="category-two">
+    <p>Careers</p>
+    <p>Support</p>
+    <p>My Account</p>
+ </div>
+</div>
+<div class="social-links-container">
+    <div class="social-links-first-row">
+<img src="./images/twitter 1.svg" alt="">
+<img src="./images/facebook 1.svg" alt="">
+<img src="./images/Group 49.svg" alt="">
+    </div>
+    <div class="social-links-last-row">
+<img src="./images/linkedin 1.svg" alt="">
+<img src="./images/instagram 1.svg" alt="">
+<img src="./images/apple 1.svg" alt="">
+    </div>
+</div>
+<div class="footer-settings">
+    <div class="settings-one">
+        <p>Terms and Conditions</p>
+        <p>Privacy Policy</p>
+    </div>
+    <div class="setting-two">
+        <p>Cookie Policy</p>
+        <p>Privacy Settings</p>
+    </div>
+</div>
+<div class="copy-right">
+<p>Play Games @ Gamer 
+    &copy; 2000-2023 Gamer Bangladesh</p>
+</div>
   </footer>  
+  <!--------footer Ends----------------------->
 </body>
 </html>
