--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+   <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -169,8 +170,8 @@
     </div>
 </div>
 <div class="copy-right">
-<p>Play Games @ Gamer 
-    &copy; 2000-2023 Gamer Bangladesh</p>
+<p><small>Play Games @ Gamer 
+    &copy; 2000-2023 Gamer Bangladesh</small></p>
 </div>
   </footer>  
   <!--------footer Ends----------------------->
