--- a/index.html
+++ b/index.html
@@ -53,18 +53,42 @@
     <div class="online-games-images">
     <img class="online-games-photo" src="./images/Rectangle 4.png" alt="">
     <p class="online-games-desc">No Download. No Installs. Play <br> games Instantly on Gamer.</p>    
-    </div>
+<div class="image-overlay">
+  <div class="play-button">
+    <img src="./images/play-button 1.svg" alt="">
+    <p class="watch-now">Watch Now</p>
+  </div>  
+</div>    
+</div>   
     <div class="online-games-images">
     <img class="online-games-photo" src="./images/Rectangle 5.png" alt="">
-    <p class="online-games-desc">Did you score? #unblockedgames <br>#school</p>    
+    <p class="online-games-desc">Did you score? #unblockedgames <br>#school</p>  
+    <div class="image-overlay">
+        <div class="play-button">
+          <img src="./images/play-button 1.svg" alt="">
+          <p class="watch-now">Watch Now</p>
+        </div>  
+      </div>      
     </div>
     <div class="online-games-images">
     <img class="online-games-photo" src="./images/Rectangle 7.png" alt="">
-    <p class="online-games-desc">Breaking game records <br>like OG</p>    
+    <p class="online-games-desc">Breaking game records <br>like OG</p>  
+    <div class="image-overlay">
+        <div class="play-button">
+          <img src="./images/play-button 1.svg" alt="">
+          <p class="watch-now">Watch Now</p>
+        </div>  
+      </div>       
     </div>
     <div class="online-games-images">
     <img class="online-games-photo" src="./images/Rectangle 6.png" alt="">
-    <p class="online-games-desc">Busted gaming on school laptop, <br>but you are still lit.</p>    
+    <p class="online-games-desc">Busted gaming on school laptop, <br>but you are still lit.</p> 
+    <div class="image-overlay">
+        <div class="play-button">
+          <img src="./images/play-button 1.svg" alt="">
+          <p class="watch-now">Watch Now</p>
+        </div>  
+      </div>       
     </div>
 </div>
 <!---------Online games section Ends--------------------->
